--- a/WAR API project/index.css
+++ b/WAR API project/index.css
@@ -39,7 +39,7 @@ div.card-slot {
 }
 
 div.card-slot:nth-of-type(1) {
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 
 img.card {
@@ -60,4 +60,8 @@ div.top > p {
 
 button:disabled {
     cursor: not-allowed;
+}
+
+h2 {
+    margin: 10px;
 }
